<resources>
    <string name="app_name">Junk Food Tracker</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="logo">JFT</string>
    <string name="email">email</string>
    <string name="sign_up">Sign Up</string>
    <string name="facebook_app_id">1946878445612144</string>
    <string name="fb_login_protocol_scheme">fb1946878445612144</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="energy_unit"> Kcal</string>
    <string name="unit"> g</string>
    <string name="product_found">product found</string>
    <string name="enjoy">Enjoy Your Snack!</string>
    <string name="error">Please try again</string>
    <string name="welcome">Just Registered</string>
    <string name="authentication_issue">Authentication Failed</string>

    <string name="action_settings">Settings</string>
    <string name="date_format">%s/%s/%s</string>
    <string name="brand_name">Brand Name: %s</string>
    <string name="energy">Energy\u0020 %s %s</string>
    <string name="saturated_fat">Saturated Fat %s%s</string>
    <string name="sugars">Sugars %s%s</string>
    <string name="carbohydrates">Carbohydrates %s%s</string>
    <string name="invalidPassword">Password must contain capital/small letters, digit and bigger than 8 characters</string>
    <string name="invalidEmail">Invalid Email</string>
    <string name="facebookError">facebook error</string>
    <string name="facebookCancel">facebook cancel</string>
    <string name="pp">public_profile</string>
    <string name="invalidEmailPass">incorrect email or password</string>
    <string name="today_s_products">Today\'s Products</string>
    <string name="yesterday_s_products">Yesterday\'s Products</string>
    <string name="today_s_total_nutrition_info">Today\'s Total Nutrition Info \u0020</string>
    <string name="yesterday_s_total_nutrition_info">Yesterday\'s Total Nutrition Info \u0020</string>
    <string name="connection">Please Check Your Internet Connection And Try Again</string>
    <string name="nutTitle">Total Nutrition Info of %s</string>
    <string name="productTitle">Products of %s</string>
    <string name="energy_key">energy</string>
    <string name="saturated_fat_key">saturated_fat</string>
    <string name="sugars_key">sugars</string>
    <string name="carbohydrates_key">carbohydrates</string>
    <string name="title_welcome">Welcome To Junk Food Tracker!</string>
    <string name="desc_welcome">JFT helps you track your daily food by scanning barcode, counting the total calories and other important minerals</string>
    <string name="title_start">So lets start by adding our first food</string>
    <string name="energy_default">2000</string>
    <string name="saturatedFat_default">30</string>
    <string name="sugars_default">38</string>
    <string name="carbohydrates_default">20</string>
    <string name="invalid_period">Invalid Period</string>
    <string name="today">Today</string>
    <string name="calender">Calender</string>
    <string name="scanner_activity_name">Scanner</string>
    <string name="warning_msg">Invalid Period</string>
    <string name="thank_you">Thank You</string>
    <string name="warning_minus">Can\'t be minimized</string>
    <string name="warning_plus">10 is the max</string>
</resources>
